@@ -1,5 +1,10 @@
 2004-05-05  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (add_instance_to_mode): don't set the RECURID on
+	non-recurring events.
+
+2004-05-05  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/e-cal-model.c (add_instance_to_model, e_cal_view_objects_added_cb,
 	e_cal_view_objects_removed_c): call e_table_model_pre_change in the
 	correct places.
